--- a/gb/19/12/31/n11758332.md
+++ b/gb/19/12/31/n11758332.md
@@ -1,35 +1,35 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/owsjff3260/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/owsjff3260/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/owsjff3260/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/owsjff3260/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/owsjff3260/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/owsjff3260/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/owsjff3260/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/owsjff3260/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/owsjff3260/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/owsjff3260/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/owsjff3260/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/owsjff3260/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/owsjff3260/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/owsjff3260/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/owsjff3260/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/owsjff3260/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/owsjff3260/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/owsjff3260/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/owsjff3260/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/owsjff3260/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/owsjff3260/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/owsjff3260/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/owsjff3260/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/owsjff3260/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/owsjff3260/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/owsjff3260/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/owsjff3260/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/owsjff3260/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/owsjff3260/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/owsjff3260/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/owsjff3260/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/owsjff3260/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/owsjff3260/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/owsjff3260/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/owsjff3260/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/owsjff3260/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/owsjff3260/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/owsjff3260/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/owsjff3260/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/owsjff3260/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/owsjff3260/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/owsjff3260/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/owsjff3260/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/owsjff3260/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/owsjff3260/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/owsjff3260/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/owsjff3260/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/kobfyi3602/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>“为新的一年带来希望”神韵旧金山首场爆满</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/01/1912311513291749-600x400.jpg" />
 <h6>2019年12月30日，神韵环球艺术团在旧金山歌剧院的首场演出爆满。（周元融／大纪元）
 </h6>
 <hr>
-	<p>【大纪元2019年12月31日讯】（大纪元美国旧金山记者站报导）12月30日，美国<ahref="https://github.com/owsjff3260/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>环球艺术团在<ahref="https://github.com/owsjff3260/djy/blob/master/gb/tag/%E6%97%A7%E9%87%91%E5%B1%B1%E6%AD%8C%E5%89%A7%E9%99%A2.md#1">旧金山歌剧院</a>（War Memorial Opera House）的首场演出爆满。在新年即将到来之际，人们都想一睹享有“世界第一秀”美名的神韵演出，为自己带来好运。</p>
-<h2>投资顾问：<ahref="https://github.com/owsjff3260/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>传递的是美好的信息</h2>
+	<p>【大纪元2019年12月31日讯】（大纪元美国旧金山记者站报导）12月30日，美国<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>环球艺术团在<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E6%97%A7%E9%87%91%E5%B1%B1%E6%AD%8C%E5%89%A7%E9%99%A2.md#1">旧金山歌剧院</a>（War Memorial Opera House）的首场演出爆满。在新年即将到来之际，人们都想一睹享有“世界第一秀”美名的神韵演出，为自己带来好运。</p>
+<h2>投资顾问：<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>传递的是美好的信息</h2>
 <p>高科技投资顾问John Manoyan博士说，“神韵应该在香港、北京、成都、上海都能上演。”他认为，神韵传递的是美好的信息，应该拥有在任何地方上演的自由。</p>
-<p>John Manoyan认为，神韵根植于中国的<ahref="https://github.com/owsjff3260/djy/blob/master/gb/tag/%E4%BC%A0%E7%BB%9F%E6%96%87%E5%8C%96.md#1">传统文化</a>和历史，与今天的共产党有根本的不同。传递的是基于古老文化和信仰的一种非暴力的信息。他说，“神韵应该在任何地方上演，尤其是在中国，那是文化的来源。她在世界其它地方都受到欢迎，人们真的很喜欢她。”</p>
-<figure id="attachment_11758305" style="width: 450px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2019/12/191231030531100055.jpg"><img class="wp-image-11758305 size-medium" title="12月30日第1场7:30pm 旧金山" src="https://i.epochtimes.com/assets/uploads/2019/12/191231030531100055-450x300.jpg" alt="12月30日第1场7:30pm 旧金山" width="450" b="300" /></a><figcaption class="wp-caption-text">2019年12月30日，湾区著名的高科技投资顾问John Manoyan博士和妻子Susan Manoyan观看了神韵环球艺术团在<ahref="https://github.com/owsjff3260/djy/blob/master/gb/tag/%E6%97%A7%E9%87%91%E5%B1%B1%E6%AD%8C%E5%89%A7%E9%99%A2.md#1">旧金山歌剧院</a>的首场演出。（于丽丽／大纪元）</figcaption></figure>
+<p>John Manoyan认为，神韵根植于中国的<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E4%BC%A0%E7%BB%9F%E6%96%87%E5%8C%96.md#1">传统文化</a>和历史，与今天的共产党有根本的不同。传递的是基于古老文化和信仰的一种非暴力的信息。他说，“神韵应该在任何地方上演，尤其是在中国，那是文化的来源。她在世界其它地方都受到欢迎，人们真的很喜欢她。”</p>
+<figure id="attachment_11758305" aria-describedby="caption-attachment-11758305" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2019/12/191231030531100055.jpg"><img class="wp-image-11758305 size-medium" title="12月30日第1场7:30pm 旧金山" src="https://i.epochtimes.com/assets/uploads/2019/12/191231030531100055-450x300.jpg" alt="12月30日第1场7:30pm 旧金山" width="450" b="300" /></a><figcaption id="caption-attachment-11758305" class="wp-caption-text">2019年12月30日，湾区著名的高科技投资顾问John Manoyan博士和妻子Susan Manoyan观看了神韵环球艺术团在<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E6%97%A7%E9%87%91%E5%B1%B1%E6%AD%8C%E5%89%A7%E9%99%A2.md#1">旧金山歌剧院</a>的首场演出。（于丽丽／大纪元）</figcaption></figure>
 <p>&nbsp;</p>
 <p>他的太太Susan Manoyan赞叹道：“壮观宏伟！神韵给人的感觉很美，是一种充满希望和美丽的正向积极的感觉，那正是这个世界应该的样子。面对当今生活中发生的一切，她带给人希望，这至关重要。”</p>
 <h2>牧师佩服演员超凡的技能</h2>
-<figure id="attachment_11757689" style="width: 450px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2019/12/191231030505100055.jpg"><img class="wp-image-11757689 size-medium" title="12月30日第1场7:30pm 旧金山" src="https://i.epochtimes.com/assets/uploads/2019/12/191231030505100055-450x300.jpg" alt="12月30日第1场7:30pm 旧金山" width="450" b="300" /></a><figcaption class="wp-caption-text">2019年12月30日，Mark Sligar牧师和妻子Brenda Sligar观看了神韵环球艺术团在旧金山歌剧院的首场演出。（于丽丽／大纪元）</figcaption></figure>
+<figure id="attachment_11757689" aria-describedby="caption-attachment-11757689" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2019/12/191231030505100055.jpg"><img class="wp-image-11757689 size-medium" title="12月30日第1场7:30pm 旧金山" src="https://i.epochtimes.com/assets/uploads/2019/12/191231030505100055-450x300.jpg" alt="12月30日第1场7:30pm 旧金山" width="450" b="300" /></a><figcaption id="caption-attachment-11757689" class="wp-caption-text">2019年12月30日，Mark Sligar牧师和妻子Brenda Sligar观看了神韵环球艺术团在旧金山歌剧院的首场演出。（于丽丽／大纪元）</figcaption></figure>
 <p>牧师Mark Sligar说， “我佩服演员超凡的技能，卓越的水平，喜爱服装和色彩，所有的呈现都是那么完美。中英文的主持解说，更增添了趣味，我非常喜欢。”</p>
 <p>他的太太Brenda也感到由衷敬佩，“演出中没有仇恨，没有愤怒，演绎的是事实，是至今还在发生的事实。” Brenda认为，神韵演出传递着很重要的信息。谈到了在共产国家，人们没有信仰自由。“在美国，人们难以想像有人会因为信仰遭到迫害。”她说，“让人们能看到，了解这些非常重要，做得很好。”</p>
 <p>对此Mark Sligar也表示非常认同，“而且这是以一种非常优雅和巧妙的方式实现的，这真的很棒！”</p>
 <h2>著名科学家赞神韵是绝对惊人的演出</h2>
-<figure id="attachment_11757681" style="width: 450px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2019/12/191231021959100055.jpg"><img class="wp-image-11757681 size-medium" title="12月30日第1场7:30pm 旧金山" src="https://i.epochtimes.com/assets/uploads/2019/12/191231021959100055-450x300.jpg" alt="12月30日第1场7:30pm 旧金山" width="450" b="300" /></a><figcaption class="wp-caption-text">2019年12月30日晚上，科学家Pavel Lazarev观看神韵环球艺术团在加州旧金山的首场演出。（林家维／大纪元）</figcaption></figure>
+<figure id="attachment_11757681" aria-describedby="caption-attachment-11757681" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2019/12/191231021959100055.jpg"><img class="wp-image-11757681 size-medium" title="12月30日第1场7:30pm 旧金山" src="https://i.epochtimes.com/assets/uploads/2019/12/191231021959100055-450x300.jpg" alt="12月30日第1场7:30pm 旧金山" width="450" b="300" /></a><figcaption id="caption-attachment-11757681" class="wp-caption-text">2019年12月30日晚上，科学家Pavel Lazarev观看神韵环球艺术团在加州旧金山的首场演出。（林家维／大纪元）</figcaption></figure>
 <p>Pavel Lazarev博士是俄国著名科学家，他表示经常在莫斯科大剧院看演出，对不同民间舞蹈和芭蕾舞非常的熟悉。“今天我所看到的演出是绝对的惊人，宏伟壮观，精彩绝伦。”</p>
 <p>他说：“演出非常的令人印象深刻，今天所看到的古老文化内涵，其历史悠久远超过自己所认识的，太美了！”</p>
 <h2>公司顾问：带来希望 神韵太伟大了</h2>
-<figure id="attachment_11758372" style="width: 450px" class="wp-caption aligncenter"><img class="size-medium wp-image-11758372" src="https://i.epochtimes.com/assets/uploads/2019/12/191231023426100055-ss1-450x300.jpg" alt="" width="450" b="300" /><figcaption class="wp-caption-text">12月30日，Arbonne International公司的顾问Holly Shantara Farrow（左）与好友观看了神韵环球艺术团在旧金山的首场演出。（周容／大纪元）</figcaption></figure>
+<figure id="attachment_11758372" aria-describedby="caption-attachment-11758372" style="width: 450px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2019/12/191231023426100055-ss1-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img class="size-medium wp-image-11758372" src="https://i.epochtimes.com/assets/uploads/2019/12/191231023426100055-ss1-450x300.jpg" alt="" width="450" b="300" /></a><figcaption id="caption-attachment-11758372" class="wp-caption-text">12月30日，Arbonne International公司的顾问Holly Shantara Farrow（左）与好友观看了神韵环球艺术团在旧金山的首场演出。（周容／大纪元）</figcaption></figure>
 <p>Arbonne International公司的顾问Holly Shantara Farrow说，“神韵是天之所赐，因为她让灵魂更新，并提醒我们，我们来到地球，是要点亮希望之光，而不是处于黑暗之中。”</p>
-<p>第一个节目演绎了<ahref="https://github.com/owsjff3260/djy/blob/master/gb/tag/%E5%88%9B%E4%B8%96%E4%B8%BB.md#1">创世主</a>带领众神降临世间开创人类文明，“我认为那是真的，我们要记忆起我们真正的自己，记忆起创世主降临人间，所以我们要打坐，与我们自己的内在沟通，认识到创世主已来此。”</p>
+<p>第一个节目演绎了<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%88%9B%E4%B8%96%E4%B8%BB.md#1">创世主</a>带领众神降临世间开创人类文明，“我认为那是真的，我们要记忆起我们真正的自己，记忆起创世主降临人间，所以我们要打坐，与我们自己的内在沟通，认识到创世主已来此。”</p>
 <p>“你看，从剧院出来的每个人脸上都挂着笑容，”她说，“他们互相善待对方，让人有良好的感觉，让人的心灵受到触动。”</p>
 <p>她说：“神韵给大家带来希望，为新的一年带来希望。当我们遇到挫折，感到悲伤，我们仍然有希望。神韵太伟大了！”</p>
 <h2>高级主管：感受到希望</h2>
-<figure id="attachment_11757748" style="width: 450px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2019/12/191231030538100055.jpg"><img class="wp-image-11757748 size-medium" title="12月30日第1场7:30pm 旧金山" src="https://i.epochtimes.com/assets/uploads/2019/12/191231030538100055-450x300.jpg" alt="12月30日第1场7:30pm 旧金山" width="450" b="300" /></a><figcaption class="wp-caption-text">2019年12月30日晚，Mandu Ibrahim和太太Majda Ibrahim在旧金山歌剧院，欣赏了美国神韵环球艺术团的首场演出。（张倩／大纪元）</figcaption></figure>
+<figure id="attachment_11757748" aria-describedby="caption-attachment-11757748" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2019/12/191231030538100055.jpg"><img class="wp-image-11757748 size-medium" title="12月30日第1场7:30pm 旧金山" src="https://i.epochtimes.com/assets/uploads/2019/12/191231030538100055-450x300.jpg" alt="12月30日第1场7:30pm 旧金山" width="450" b="300" /></a><figcaption id="caption-attachment-11757748" class="wp-caption-text">2019年12月30日晚，Mandu Ibrahim和太太Majda Ibrahim在旧金山歌剧院，欣赏了美国神韵环球艺术团的首场演出。（张倩／大纪元）</figcaption></figure>
 <p>科技公司的高级主管Mandu Ibrahim认为神韵传递的敬天信神的内涵很重要，“我们需要精神上的指引，演出最后一个节目中，展现出信仰可以影响人们的未来，文化也对人有影响，这都很吸引人。”他认为演出中的精神内涵是普世的，“这是普世的价值，她包含在所有文化中。”他说，演出让人“感受到希望”。</p>
 <p>Ibrahim太太是物理治疗师，她赞同先生所说神韵的精神内涵，“我对中国文化着迷，演出让我对中国和未来有了一个完整的认识，中国文化非常开阔、博大，非常吸引人。”</p>
 <p>神韵更多信息请见：</p>
@@ -45,44 +45,43 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/owsjff3260/djy/blob/master/gb/19/12/30/n11754556.md#1">观神韵体悟文化来自神 公司经理心生景仰</a></li>
-<li><a href="https://github.com/owsjff3260/djy/blob/master/gb/19/12/30/n11754659.md#1">壮丽辉煌 独具特色 神韵令前副总裁惊叹</a></li>
-<li><a href="https://github.com/owsjff3260/djy/blob/master/gb/19/12/30/n11754701.md#1">“真正优秀的钜作” 神韵圣荷西五场全爆满</a></li>
-<li><a href="https://github.com/owsjff3260/djy/blob/master/gb/19/12/30/n11755166.md#1">神韵休斯顿周日爆满“巅峰艺术来自神助”</a></li>
-<li><a href="https://github.com/owsjff3260/djy/blob/master/gb/19/12/30/n11755406.md#1">神韵舞蹈完美脱俗 运输公司老板陶醉其中</a></li>
-<li><a href="https://github.com/owsjff3260/djy/blob/master/gb/19/12/30/n11755911.md#1">神韵展现神佛世界 公司老板心生向往</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/12/30/n11754556.md#1">观神韵体悟文化来自神 公司经理心生景仰</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/12/30/n11754659.md#1">壮丽辉煌 独具特色 神韵令前副总裁惊叹</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/12/30/n11754701.md#1">“真正优秀的钜作” 神韵圣荷西五场全爆满</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/12/30/n11755166.md#1">神韵休斯顿周日爆满“巅峰艺术来自神助”</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/12/30/n11755406.md#1">神韵舞蹈完美脱俗 运输公司老板陶醉其中</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/12/30/n11755911.md#1">神韵展现神佛世界 公司老板心生向往</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/1/n11693550.md#1" target="_blank">为中共效力的红色特工 后来怎么样了（1）</a></li><li><a href="https://github.com/owsjff3260/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/25/n11409005.md#1" target="_blank">法轮功反迫害 川普政府与美国国会公开声援</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/20/12/8/n12602834.md#1" target="_blank">35国逾九百政要联署 谴责中共迫害法轮功</a>  </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/14/n10637364.md#1" target="_blank">中共“文艺沙皇”被囚9年 晚年反思悲剧终局</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/20/n11397207.md#1" target="_blank">宗教与民主研究院主任：感谢法轮功坚持真理</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/gxnqzo350/djy/blob/master/gb/21/1/13/n12684593.md#1">美国CIA解密大量UFO文件 网上可下载</a></li>
-<li><a href="https://github.com/gxnqzo350/djy/blob/master/gb/21/1/5/n12667124.md#1">大疫将行 三指中共</a></li>
-<li><a href="https://github.com/gxnqzo350/djy/blob/master/gb/20/9/29/n12439101.md#1">四岁儿子对妈妈说：我死过一次 很痛！</a></li>
-<li><a href="https://github.com/gxnqzo350/djy/blob/master/gb/20/12/30/n12653733.md#1">【命理】有无富贵命怎看 二举人求功名为何丧命？</a></li>
-<li><a href="https://github.com/gxnqzo350/djy/blob/master/gb/21/1/15/n12691126.md#1">【有冇搞错】马斯克建议人类“爱和宽容”</a></li>
-<li><a href="https://github.com/gxnqzo350/djy/blob/master/gb/21/1/16/n12691801.md#1">【思想领袖】议员米勒：1月6日国会惊魂</a></li>
-<li><a href="https://github.com/gxnqzo350/djy/blob/master/gb/21/1/11/n12681201.md#1">【珍言真语】姜嘉伟：外星人和UFO探秘</a></li>
-<li><a href="https://github.com/gxnqzo350/djy/blob/master/gb/21/1/16/n12691519.md#1">【西岸观察】推特内部讲话外泄 称关更多账号</a></li>
-<li><a href="https://github.com/gxnqzo350/djy/blob/master/gb/21/1/16/n12692722.md#1">中国疫情严重 河北廊坊等地出现“随地倒”</a></li>
-<li><a href="https://github.com/gxnqzo350/djy/blob/master/gb/21/1/15/n12691080.md#1">刘嘉玲晒照为弟媳庆生 亿万财产或由侄子继承</a></li>
-<li><a href="https://github.com/gxnqzo350/djy/blob/master/gb/21/1/15/n12691475.md#1">蚂蚁集团成立整改组 马云被指服软认错了</a></li>
-<li><a href="https://github.com/gxnqzo350/djy/blob/master/gb/21/1/15/n12691080.md#1">刘嘉玲晒照为弟媳庆生 亿万财产或由侄子继承</a></li>
-<li><a href="https://github.com/gxnqzo350/djy/blob/master/gb/21/1/15/n12691267.md#1">余苑绮少外食戒油炸仍罹癌 营养师点出关键</a></li>
-<li><a href="https://github.com/gxnqzo350/djy/blob/master/gb/21/1/15/n12689631.md#1">【专访】王彩桦：心存善念 人生没有过不去的关卡</a></li>
-<li><a href="https://github.com/gxnqzo350/djy/blob/master/gb/21/1/15/n12691425.md#1">59岁张学友近况曝光 胡须斑白双颊凹陷</a></li>
-<li><a href="https://github.com/gxnqzo350/djy/blob/master/gb/21/1/16/n12691628.md#1">《末日激战》影评：机器人元素 让核武危机更有看点</a></li>
-<li><a href="https://github.com/gxnqzo350/djy/blob/master/gb/21/1/15/n12689933.md#1">好疗愈 两只法斗犬与沙发撞衫 往上一趴就隐身</a></li>
-<li><a href="https://github.com/gxnqzo350/djy/blob/master/gb/21/1/16/n12691636.md#1">【重播】洛杉矶停尸房告急 美国新变种严重吗？</a></li>
-<li><a href="https://github.com/gxnqzo350/djy/blob/master/gb/21/1/13/n12685661.md#1">缺生长激素会长皱纹、掉发 这时间睡觉分泌最多</a></li>
-<li><a href="https://github.com/gxnqzo350/djy/blob/master/gb/21/1/17/n12693215.md#1">“我不要治疗只要去台湾”马克杯网上出售</a></li>
-<li><a href="https://github.com/gxnqzo350/djy/blob/master/gb/21/1/15/n12689904.md#1">法国“已故”女子 努力证明自己还活着</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/12/n13734778.md#1">【百年真相】替毛背锅“红色特工”潘汉年惨死</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/5/n13727490.md#1">【百年真相】密谋“金融政变” 肖建华将现身？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/28/n13747559.md#1">一首名曲奏出大提琴前所未有的力量</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/29/n13748202.md#1">【未解之谜】通行灵界的科学家之二 天堂见闻</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/18/n13739799.md#1">【奇梦】姻缘天定 女子依梦得夫 男子依梦得妻</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752277.md#1">【马克时空】预警机、侦察机扮奇兵 助乌军精准打击俄军</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/26/n13746033.md#1">【探索时分】四大理由 中共应向俄罗斯开战？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752508.md#1">【唐瑞讲故事】睡美人</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752436.md#1">李克强十万人大会事先获得习近平默许？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752163.md#1">深圳前市长陈如桂落马 传有三大原因</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751923.md#1">港星杨英伟出售千万房产 已举家移民奥地利</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751832.md#1">评论：《壮志凌云2》证明好莱坞无需中国市场</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751310.md#1">张娜拉6月底结婚 赞新郎笑容美好且诚实善良</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/2/n13751276.md#1">好莱坞明星强尼戴普诽谤案胜诉 台主播发感言</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/26/n13746023.md#1">腰痛是肾脏在求救？肾是沉默器官 4症状要警惕</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/1/n13750249.md#1">长白发原因不一定是衰老！2种方法白发变黑发</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751690.md#1">危险长新冠4类人警惕 疫苗也挡不住？1招改善</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751309.md#1">研究发现人类肝脏永远年轻 只有不到三岁</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752195.md#1">5个早上常见的习惯 会降低睡眠品质</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/owsjff3260/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/owsjff3260/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/12/31/n11758332.htm">“为新的一年带来希望”神韵旧金山首场爆满</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/12/31/n11758332.htm">“为新的一年带来希望”神韵旧金山首场爆满</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/owsjff3260/djy/blob/master/gb/19/12/31/n11758332.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/owsjff3260/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owsjff3260/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/owsjff3260/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/owsjff3260/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/owsjff3260/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owsjff3260/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/owsjff3260/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owsjff3260/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/owsjff3260/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owsjff3260/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/owsjff3260/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owsjff3260/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/owsjff3260/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owsjff3260/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/owsjff3260/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owsjff3260/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/owsjff3260/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owsjff3260/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/owsjff3260/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owsjff3260/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/owsjff3260/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owsjff3260/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/owsjff3260/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owsjff3260/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/owsjff3260/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owsjff3260/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/owsjff3260/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owsjff3260/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/owsjff3260/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owsjff3260/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/owsjff3260/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owsjff3260/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/owsjff3260/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owsjff3260/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/owsjff3260/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owsjff3260/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/owsjff3260/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owsjff3260/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/owsjff3260/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owsjff3260/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/owsjff3260/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owsjff3260/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/owsjff3260/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owsjff3260/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/owsjff3260/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owsjff3260/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/owsjff3260/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owsjff3260/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/kobfyi3602/djy/blob/master/gb/19/12/31/n11758332.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
